--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <body>
     <main>
         <h1>Welcome to Puzzle games</h1>  
+      <ul>
+          <li><a href="https://wejoy.asia/privacy.txt">PRIVACY</a></li>
+          <li><a href="mailto:wejoygamesstudio@wejoy.asia">CONTACT US</a></li>
+      </ul>
     </main>
   </body>
 </html>
