--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <main>
         <h1>Welcome to Puzzle games</h1>  
       <ul>
-          <li><a href="https://wejoy.asia/privacy.txt">PRIVACY</a></li>
-          <li><a href="mailto:wejoygamesstudio@wejoy.asia">CONTACT US</a></li>
+          <li><a href="https://puzzlegame.github.io/policy.txt">Policy</a></li>
       </ul>
     </main>
   </body>
